// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Profile snapshot matches the rendered markup (dark) 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-13ot3tw"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1dv4d4j-MuiPaper-root"
      style="--Paper-shadow: none;"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-19n3sl7-MuiSvgIcon-root"
        data-testid="AccountCircleIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6m0 14c-2.03 0-4.43-.82-6.14-2.88C7.55 15.8 9.68 15 12 15s4.45.8 6.14 2.12C16.43 19.18 14.03 20 12 20"
        />
      </svg>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1m66o6n-MuiTypography-root"
      >
        You're not signed in
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-18l23t4-MuiTypography-root"
      >
        Please 
        <a
          href="/login"
          style="color: rgb(245, 124, 0); font-weight: 600;"
        >
          log in
        </a>
         to view your profile.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Profile snapshot matches the rendered markup (light) 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-gtw5ez"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-hbfri6-MuiPaper-root"
      style="--Paper-shadow: none;"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-19n3sl7-MuiSvgIcon-root"
        data-testid="AccountCircleIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6m0 14c-2.03 0-4.43-.82-6.14-2.88C7.55 15.8 9.68 15 12 15s4.45.8 6.14 2.12C16.43 19.18 14.03 20 12 20"
        />
      </svg>
      <p
        class="MuiTypography-root MuiTypography-body1 css-23kx2n-MuiTypography-root"
      >
        You're not signed in
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1wvtu5f-MuiTypography-root"
      >
        Please 
        <a
          href="/login"
          style="color: rgb(245, 124, 0); font-weight: 600;"
        >
          log in
        </a>
         to view your profile.
      </p>
    </div>
  </div>
</DocumentFragment>
`;
